<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <TextView
            android:id="@+id/label_name"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/label_name"
            android:textAppearance="@style/LabelTextStyle"
            app:layout_constraintTop_toTopOf="@id/name"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="Humvee"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/label_name"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/label_date_added"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/label_date_added"
            android:textAppearance="@style/LabelTextStyle"
            app:layout_constraintTop_toBottomOf="@id/name"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/date_added"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="2008-04-01 01:33:01"
            app:layout_constraintTop_toTopOf="@id/label_date_added"
            app:layout_constraintBottom_toBottomOf="@id/label_date_added"
            app:layout_constraintStart_toEndOf="@id/label_date_added"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/label_date_last_updated"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/label_date_last_updated"
            android:textAppearance="@style/LabelTextStyle"
            app:layout_constraintTop_toBottomOf="@id/label_date_added"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/date_last_updated"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            tools:text="2011-07-06 20:56:42"
            app:layout_constraintTop_toTopOf="@id/label_date_last_updated"
            app:layout_constraintBottom_toBottomOf="@id/label_date_last_updated"
            app:layout_constraintStart_toEndOf="@id/label_date_last_updated"
            app:layout_constraintEnd_toEndOf="parent" />

        <ImageView
            android:id="@+id/image"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginTop="10dp"
            tools:background="#990000ff"
            app:layout_constraintTop_toBottomOf="@id/label_date_last_updated"
            app:layout_constraintStart_toStartOf="parent"
            android:contentDescription="TODO" />

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/loading_layout"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="@id/image"
            app:layout_constraintEnd_toEndOf="@id/image"
            app:layout_constraintStart_toStartOf="@id/image"
            app:layout_constraintTop_toTopOf="@id/image">

            <View
                android:id="@+id/placeholder_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/background_gif_placeholder" />

        </com.facebook.shimmer.ShimmerFrameLayout>

        <TextView
            android:id="@+id/description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:textStyle="italic"
            tools:text="@string/no_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/image" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>